Closed Bug 736504 Opened 12 years ago Closed 12 years ago

Linker error unresolved external symbol __imp__JS_Assert on Beta/12

Categories

(Firefox :: Migration, defect)

12 Branch
x86
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED
Firefox 12
Tracking Status
firefox12 --- fixed
firefox13 --- unaffected
firefox14 --- unaffected

People

(Reporter: bc, Assigned: mak)

References

Details

(Whiteboard: [should only land in beta12][qa-])

Attachments

(1 file)

After bug 735312 landed on Beta, debug builds on Windows fail with

c:/mozilla-build/python/python2.7.exe /c/work/mozilla/builds/beta/mozilla/config/pythonpath.py -I../../../config /c/work/mozilla/builds/beta/mozilla/config/expandlibs_exec.py --uselist -- link -NOLOGO -DLL -OUT:browsercomps.dll -PDB:browsercomps.pdb -SUBSYSTEM:WINDOWS  nsModule.obj   ./module.res -LARGEADDRESSAWARE -NXCOMPAT -DYNAMICBASE -SAFESEH  -DEBUG -DEBUGTYPE:CV  -IMPLIB:fake.lib c:/work/mozilla/builds/beta/mozilla/firefox-debug/dist/lib/mozglue.lib  ../feeds/src/browser_feeds_s.lib ../privatebrowsing/src/privatebrowsing_s.lib ../about/browserabout_s.lib ../dirprovider/browserdir_s.lib  ../shell/src/shellservice_s.lib ../migration/src/migration_s.lib c:/work/mozilla/builds/beta/mozilla/firefox-debug/dist/lib/unicharutil_external_s.lib c:/work/mozilla/builds/beta/mozilla/firefox-debug/dist/lib/xpcomglue_s.lib c:/work/mozilla/builds/beta/mozilla/firefox-debug/dist/lib/xpcom.lib c:/work/mozilla/builds/beta/mozilla/firefox-debug/dist/lib/xul.lib c:/work/mozilla/builds/beta/mozilla/firefox-debug/dist/lib/mozalloc.lib c:/work/mozilla/builds/beta/mozilla/firefox-debug/dist/lib/nspr4.lib c:/work/mozilla/builds/beta/mozilla/firefox-debug/dist/lib/plc4.lib c:/work/mozilla/builds/beta/mozilla/firefox-debug/dist/lib/plds4.lib    kernel32.lib user32.lib gdi32.lib winmm.lib wsock32.lib advapi32.lib ole32.lib shell32.lib version.lib   
   Creating library fake.lib and object fake.exp
LINK : warning LNK4098: defaultlib 'LIBCMTD' conflicts with use of other libs; use /NODEFAULTLIB:library
nsIEProfileMigrator.obj : error LNK2019: unresolved external symbol __imp__JS_Assert referenced in function "protected: unsigned int __thiscall nsIEProfileMigrator::CopyFavoritesBatched(bool)" (?CopyFavoritesBatched@nsIEProfileMigrator@@IAEI_N@Z)
browsercomps.dll : fatal error LNK1120: 1 unresolved externals
make[7]: *** [browsercomps.dll] Error 96

I'm building with VS2005
Attached patch patch v1.0Splinter Review
Please try this one.
Assignee: nobody → mak77
Status: NEW → ASSIGNED
Attachment #606608 - Flags: feedback?(bclary)
Comment on attachment 606608 [details] [diff] [review]
patch v1.0

works for me! Thanks!
Attachment #606608 - Flags: feedback?(bclary) → feedback+
Comment on attachment 606608 [details] [diff] [review]
patch v1.0

the problem here is that in beta MOZ_ASSERT is still defined through JS_ASSERT and browsercomps.dll doesn't link against jslib.
Though for some reason this works on our tree, so either the build order may differ, or the visual studio version has something to do with that.

Regardless, this is not a problem in Aurora and Nightly since MOZ_ASSERT there doesn't depends anymore on JS_ASSERT, and it's safer to use abort in beta to avoid problems with some build configuration.
Attachment #606608 - Flags: review?(gavin.sharp)
to clarify, this will only land in beta.
Attachment #606608 - Flags: review?(gavin.sharp) → review+
Comment on attachment 606608 [details] [diff] [review]
patch v1.0

[Approval Request Comment]
Regression caused by (bug #): bug 735312
User impact if declined: Impossible to build with some compiler version
Testing completed (on m-c, etc.): local build
Risk to taking this patch (and alternatives if risky): debug-only assertion change, practically none
String changes made by this patch: none
Attachment #606608 - Flags: approval-mozilla-beta?
Whiteboard: [should only land in beta12]
Attachment #606608 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
https://hg.mozilla.org/releases/mozilla-beta/rev/1df24b97a06c
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 12
Whiteboard: [should only land in beta12] → [should only land in beta12][qa-]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: