Bug 736504 - Linker error unresolved external symbol __imp__JS_Assert on Beta/12. r+a=gavin